@@ -122,6 +122,7 @@ following names for their contribution to the product.
 * Matthew Britton
 * mati
 * Max Sikström
+* merl
 * Michael Dale
 * Michael De La Rue
 * Michael M.
